--- a/scss/main.scss
+++ b/scss/main.scss
@@ -180,7 +180,7 @@ img {
 
     .bio {
       grid-area: bio;
-      border-left: 3px solid $main-color;
+      border-left: 3px solid $bright-color;
       padding: 0.8rem;
     }
 
