--- a/scss/main.scss
+++ b/scss/main.scss
@@ -35,9 +35,10 @@ img {
 
 // Logo
 #logo {
-  height: 70px;
-  width: 70px;
+  height: 35px;
+  width: 35px;
   padding-left: 2rem;
+  margin-bottom: 2rem;
 }
 
 // Main Nav
@@ -45,6 +46,7 @@ img {
   display: flex;
   justify-content: space-between;
   padding-top: 1rem;
+  background: #f1e8dc;
 
   ul {
     display: flex;
@@ -56,7 +58,7 @@ img {
 
   a {
     text-decoration: none;
-    color: #fff;
+    color: #333;
     text-transform: uppercase;
     border-bottom: 3px transparent solid;
     padding-bottom: 0.5rem;
@@ -76,27 +78,48 @@ img {
 #header {
   // Header Home
   &-home {
-    background: $light-color;
+    background: #f1e8dc;
     height: 100vh;
     color: $dark-color;
 
     // Header Content
     .header-content {
-      text-align: center;
+      text-align: left;
       padding-top: 20%;
+      padding-left: 20px;
+
+      img {
+        display: flex;
+        align-self: flex-end;
+        height: 200px;
+        width: auto;
+      }
 
       h1 {
         font-size: 4rem;
         line-height: 1.2;
+      }
+
+      a {
+        .fas {
+          color: $dark-color;
+          padding-left: 1rem;
+
+          &:hover {
+            color: $bright-color;
+            transform: rotate(40deg);
+            transition: ease-in 0.9s;
+          }
+        }
       }
     }
   }
 
   // Header Inner
   &-inner {
-    background: $dark-color;
+    background: #f1e8dc;
     height: 5.5rem;
-    border-bottom: 3px solid $main-color;
+    border-bottom: 3px solid $bright-color;
   }
 }
 
@@ -104,7 +127,7 @@ img {
 #home {
   // Home Section A
   &-a {
-    background-image: linear-gradient(#ffaa80, #dbdbf0);
+    background-image: linear-gradient(#f1e8dc, #ffaa80);
 
     .specials {
       margin-top: 3rem;
@@ -153,9 +176,7 @@ img {
 
   // Home Section C
   &-c {
-    background: $light-color;
-    height: 200pxs;
-    width: 100%;
+    background: #f1e8dc;
   }
 }
 
@@ -163,6 +184,7 @@ img {
 #about {
   // About A
   &-a {
+    background: #f1e8dc;
     .about-info {
       display: grid;
       grid-template-areas:
@@ -179,6 +201,7 @@ img {
     }
 
     .bio {
+      background: #f1e8dc;
       grid-area: bio;
       border-left: 3px solid $bright-color;
       padding: 0.8rem;
@@ -202,16 +225,21 @@ img {
     }
   }
 
-  // About B
+  // About B: Education -- Hidden
   &-b {
+    display: none;
+    background-image: linear-gradient(#ffaa80, #f1e8dc);
   }
 
-  // About C
+  // About C: Progress Bars
   &-c {
+    .container {
+      background-image: linear-gradient(#ffaa80, #f1e8dc);
+    }
     .progress {
       overflow: hidden;
       height: 20px;
-      background: $medium-color;
+      background: $dark-color;
       border-radius: 5px;
       margin-bottom: 0.6rem;
 
@@ -224,12 +252,13 @@ img {
     }
   }
 
-  // About D
+  // About D: Testemonials
   &-d {
+    background: #f1e8dc;
     .testemonials {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      grid-gap: 0.5re;
+      grid-gap: 0.5rem;
 
       ul {
         list-style: none;
@@ -244,6 +273,10 @@ img {
         padding: 0.5rem;
       }
 
+      li {
+        padding-left: 0.5rem;
+      }
+
       img {
         width: 50px;
         height: 50px;
@@ -253,9 +286,98 @@ img {
   }
 }
 
+// Work Page
+#work {
+  &-a {
+    background: #f1e8dc;
+
+    a {
+      color: #fff;
+    }
+  }
+}
+
+// Fieldwire Review
+#Fieldwire-content {
+  h1 {
+    background: url("../img/ricardo-gomez-angel-sYK-jN0sKBY-unsplash.jpg")
+      no-repeat center right / cover;
+    height: 80vh;
+    font-size: 3rem;
+    color: #fff;
+  }
+  img {
+    padding: 2rem 0;
+    height: 80vh;
+  }
+
+  h2 {
+    margin: 1.5rem 0;
+    text-align: center;
+  }
+
+  h3 {
+    margin: 1rem;
+  }
+
+  p {
+    padding: 1rem 0;
+  }
+}
+
+// Adobe User Guide
+#Adobe-content {
+  h1 {
+    font-size: 3rem;
+    padding: 2rem 0;
+    text-transform: uppercase;
+    color: #a63a79;
+  }
+
+  h2 {
+    text-align: center;
+    background: #f3b8d9;
+    font-size: 1.5rem;
+    padding: 1rem 1rem;
+    color: #a63a79;
+  }
+
+  h3 {
+    padding: 1rem 1rem;
+  }
+
+  p {
+    line-height: 1.5rem;
+    padding: 1rem 0.5rem;
+  }
+
+  li {
+    list-style-type: circle;
+    list-style-position: inside;
+    padding-right: 1rem;
+    padding-bottom: 0.5rem;
+  }
+  .home-screen {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0 1rem;
+    grid-gap: 5px;
+    height: 400px;
+    align-content: center;
+
+    ul {
+      padding-top: 45px;
+    }
+    h3 {
+      text-align: center;
+    }
+  }
+}
+
 // Contact Page
 #contact {
   &-a {
+    background: #f1e8dc;
     .text-fields {
       display: grid;
       grid-template-areas:
@@ -299,6 +421,7 @@ img {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       text-align: center;
+      color: $bright-color;
     }
   }
 
@@ -345,7 +468,7 @@ img {
       padding: 0.5rem;
 
       &:hover {
-        background: $main-color;
+        background: $bright-color;
       }
     }
   }
