--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -6,7 +6,7 @@ $dark-color: #333;
 $bright-color: #f88e79;
 $medium-color: #ccc;
 $bg-image: url("../img/16bit\ city\ aes-1.jpg");
-$contact-image: url("../img/anime-envelope.gif");
+$contact-image: url("../dist/img/8bit\ room.gif");
 $work-preview-image: url("../img/16\ bit\ aesthetic.jpg");
 // Set Text Color
 @function set-text-color($color) {
