--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,5 @@
 @import "config";
 @import "utilities";
-@import "item_grid";
 
 // General Styles
 * {
@@ -9,9 +8,9 @@
 }
 
 body {
-  font-family: "Dosis", sans-serif;
+  font-family: "Italiana", serif;
   line-height: 1.6;
-  background: #fff;
+  background: #ffffff;
 }
 
 a {
@@ -35,10 +34,9 @@ img {
 
 // Logo
 #logo {
-  height: 35px;
-  width: 35px;
-  padding-left: 2rem;
-  margin-bottom: 2rem;
+  width: auto;
+  height: 80px;
+  padding-left: 1.5%;
 }
 
 // Main Nav
@@ -57,7 +55,6 @@ img {
 
   a {
     text-decoration: none;
-    color: #333;
     text-transform: uppercase;
     border-bottom: 3px transparent solid;
     padding-bottom: 0.5rem;
@@ -68,708 +65,145 @@ img {
     }
 
     &.current {
-      border-color: #ff661a;
+      border-color: $secondary-color;
     }
   }
 }
-
-// Nav Dark
-#nav-dark {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 1rem;
-  background: $dark-color;
-
-  ul {
-    display: flex;
-  }
-
-  li {
-    padding: 1rem 1.5rem;
-  }
-
-  a {
-    text-decoration: none;
-    color: #fff;
-    text-transform: uppercase;
-    border-bottom: 3px transparent solid;
-    padding-bottom: 0.5rem;
-    transition: border-color 0.5s;
-
-    &:hover {
-      border-color: $medium-color;
-    }
-
-    &.current {
-      border-color: #ff661a;
-    }
-  }
-}
-
+// Home Page
 // Header
 #header {
   // Header Home
   &-home {
-    background: $dark-color;
-    height: 120vh;
-    color: #fff;
-  }
+    background: #ebe5e4;
+    height: 100vh;
+    color: $dark-color;
+    // Header Content
+    .header-content {
+      margin: 4%;
+      padding-top: 10%;
+      word-wrap: normal;
+      
 
-  // Header Content
-  &-content {
-    background: $dark-color;
-    text-align: left;
-    padding-top: 10rem;
-    padding-left: 20px;
-
-    h1 {
-      font-size: 5rem;
-      line-height: 1.2;
-    }
-    .bg-img {
-      float: right;
-      margin-bottom: 30px;
-      height: 70vh;
-      width: auto;
-      z-index: -1;
-    }
-    .about-img {
-      float: right;
-      margin-bottom: 30px;
-      height: 70vh;
-      width: 70%;
-      z-index: 1;
+      h1 {
+        text-align: left;
+        font-size: 7rem;
+        line-height: 1.2rem;
+        color: $secondary-color;
+        font-weight: 200;
+        padding-bottom: 2.5rem;
+      }
+      h3 {
+        text-align: left;
+        font-size: 2rem;
+        padding-right: 50%;
+      }
+      img{
+        float: right;
+        position: absolute;
+        top:20;
+        right:10%;
+        height: 25rem;
+        width: auto;
+        border: 1px solid #ebe5e4;
+        border-radius: 50%;
+      }
+      .btn-main {
+        margin-top: 1.5rem;
+      }
     }
   }
 
   // Header Inner
   &-inner {
-    background: $light-color;
-    color: #333;
-    height: 5.5rem;
   }
 }
-
-// Home Sections
-#home {
-  // Home Section A
-  &-a {
-    .specials {
-      margin-top: 3rem;
-      display: grid;
-      grid-gap: 1rem;
-      grid-template-columns: repeat(4, 1fr);
-
-      .fas {
-        color: #ff661a;
-        padding-bottom: 0.4rem;
-      }
-    }
-  }
-
-  // Home Section B
-  &-b {
-    .stats {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-
-      li {
-        line-height: 2;
-
-        &.stats-title {
-          font-size: 1.5rem;
-        }
-
-        &.stats-number {
-          font-size: 2rem;
-          font-weight: bold;
-        }
-      }
-
-      div {
-        padding: 3rem 0;
-
-        &:nth-child(odd) {
-          background: $light-color;
-        }
-        &:nth-child(even) {
-          background: $medium-color;
-        }
-      }
-    }
-  }
-
-  // Home Section C
-  &-c {
-    color: #fff;
-    a {
-      font-size: 1rem;
-    }
-  }
-}
-
-// About Sections
-// About A
-#about {
-  background: $dark-color;
-  &-a {
-    .about-info {
-      display: grid;
-      grid-template-areas: "bioimage bio bio";
-      grid-gap: 2rem;
-      margin-bottom: 2rem;
-
-      // Grid Areas
-      .bio-image {
-        grid-area: bioimage;
-        height: 70vh;
-        width: auto;
-        outline: 3px solid $bright-color;
-        outline-offset: 10px;
-
-        img {
-          height: 70vh;
-          width: auto;
-        }
-      }
-
-      .bio {
-        grid-area: bio;
-        border-left: 3px solid $bright-color;
-        padding: 0.8rem;
-      }
-    }
-  }
-
-  // About C: Progress Bars
-  &-c {
-    .progress {
-      overflow: hidden;
-      height: 20px;
-      background: $dark-color;
-      border-radius: 5px;
-      margin-bottom: 0.6rem;
-
-      div {
-        height: 100%;
-        color: #fff;
-        text-align: center;
-        background: $main-color;
-      }
-    }
-  }
-
-  // About D: Testemonials
-  &-d {
-    background: $light-color;
-    .testemonials {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-gap: 0.5rem;
-
-      ul {
-        list-style: none;
-        margin-top: 1rem;
-        display: flex;
-        align-items: center;
-      }
-
-      p {
-        border: 1px solid $medium-color;
-        border-radius: 5px;
-        padding: 0.5rem;
-      }
-
-      li {
-        padding-left: 0.5rem;
-      }
-
-      img {
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-      }
-    }
-  }
-}
-
-// Work Page
+// Home Section: Work
 #work {
-  &-a {
-    background: #f1e8dc;
-
-    a {
-      color: #fff;
-    }
-  }
-}
-
-// Fieldwire Review
-#Fieldwire-content {
-  h1 {
-    height: 80vh;
-    font-size: 3rem;
-    color: #fff;
-  }
-  img {
-    padding: 2rem 0;
-    height: 80vh;
-  }
-
-  h2 {
-    margin: 1.5rem 0;
-    text-align: center;
-  }
-
+  padding-top: 10rem;
+  height: 100vh;
+  width: auto;
+  background-color: #ebe5e4; 
+  // Monday Work
   h3 {
-    margin: 1rem;
-  }
-
-  p {
-    padding: 1rem 0;
-  }
-}
-
-// Adobe User Guide
-#Adobe-content {
-  h1 {
-    font-size: 3rem;
-    padding: 2rem 0;
-    text-transform: uppercase;
-    color: #a63a79;
-  }
-
-  h2 {
-    text-align: center;
-    background: #f3b8d9;
-    font-size: 1.5rem;
-    padding: 1rem 1rem;
-    color: #a63a79;
-  }
-
-  h3 {
-    padding: 1rem 1rem;
-  }
-
-  p {
-    line-height: 1.5rem;
-    padding: 1rem 0.5rem;
-  }
-
-  li {
-    list-style-type: circle;
-    list-style-position: inside;
-    padding-right: 1rem;
-    padding-bottom: 0.5rem;
-  }
-  .home-screen {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding: 0 1rem;
-    grid-gap: 5px;
-    height: 400px;
-    align-content: center;
-
-    ul {
-      padding-top: 45px;
-    }
-    h3 {
-      text-align: center;
-    }
-  }
-}
-
-// Funnimation Redesign
-#main-content-fun {
-  h1 {
-    font-size: 3rem;
-  }
-
-  .side-by-side {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
-    height: 600px;
-    width: 600px;
-    padding: 10px;
-  }
-}
-
-// Audubon Labs
-#main-content-AL {
-  .dark-purple {
-    color: #681524;
-  }
-  .orange {
-    color: #f05633;
-  }
-  .peach {
-    color: #f6866d;
-  }
-  .tan {
-    color: #f3dcbc;
-  }
-
-  .circle-dark {
-    float: right;
-    height: 50px;
-    width: 50px;
-    background-color: #681524;
-    border-radius: 50%;
-  }
-  .circle-orange {
-    float: right;
-    height: 50px;
-    width: 50px;
-    background-color: #f05633;
-    border-radius: 50%;
-  }
-  .circle-peach {
-    height: 50px;
-    width: 50px;
-    background-color: #f6866d;
-    border-radius: 50%;
-  }
-
-  .circle-tan {
-    height: 50px;
-    background-color: #f3dcbc;
-    border-radius: 50%;
-  }
-}
-// Show Off
-#high-fil {
-  .container {
-    padding: 0;
-    margin: 0;
-  }
-  h2 {
-    font-family: "Gugi", cursive;
     font-size: 2rem;
-    color: #f05633;
-    padding-bottom: 10px;
+    font-weight: lighter;
+    color: $secondary-color;
   }
-  .AL-FONT {
-    font-family: "Gugi", cursive;
-    font-size: 7rem;
-    color: #f05633;
-  }
+.monday-work {
+height: 100vh;
+width: auto;
 
-  .show-off-info {
-    background: url("../img/Audubon/audio-audio-mixer-controls-electronics-690779.jpg")
-      no-repeat center center/cover;
-    height: 70vh;
-    width: auto;
-
-    .page-info {
-      padding-top: 15px;
-      h3 {
-        background: rgba(240, 86, 51, 0.3);
-        color: #fff;
-        padding-left: 3rem;
-        width: 25%;
-      }
-    }
-
-    h2 {
-      color: #f05633;
-      font-size: 3rem;
-      position: sticky;
-      top: 0;
-      padding: 5px;
-    }
-  }
-
-  .business {
-    padding: 30px;
-    font-size: 1.7rem;
-    height: 28rem;
-
-    h1 {
-      font-family: Gugi, cursive;
-      font-size: 2.3rem;
-      color: #fff;
-      text-transform: uppercase;
-      padding: 0 10rem;
-    }
-
-    img {
-      display: block;
-      height: 10rem;
-      width: auto;
-      margin-left: auto;
-      margin-right: auto;
-    }
-  }
-  .overview {
-    padding: 0;
-
-    h1 {
-      font-family: Gugi, cursive;
-      font-size: 3rem;
-      color: #f05633;
-    }
-    h3 {
-      font-size: 1.2rem;
-    }
-    p {
-      padding: 0 90px;
-    }
-  }
-  .Music {
-    background: url(../img/Audubon/Home.png) no-repeat center center/cover;
-    height: 60vh;
-    width: auto;
-    padding: 0;
-  }
+.capitol-img {
+  height: 70vh;
+  background: url(../dist/img/showcase/elevenphotographs-ueyhzkL1_0k-unsplash.jpg); 
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-// Section B: My Role
-#AL-my-role {
-  display: grid;
-  grid-template-columns: 500px auto;
 
-  .role-info {
-    background: $dark-color;
-    h1 {
-      font-family: Gugi, cursive;
-      font-size: 2rem;
-      padding-left: 3rem;
-      padding-top: 1.5rem;
-      color: #f05633;
-    }
-    h3 {
-      font-family: Gugi, cursive;
-      font-size: 1.5rem;
-      color: #fff;
-      padding-left: 3rem;
-    }
-    p {
-      padding-left: 3rem;
-      padding-right: 3rem;
-      padding-bottom: 2rem;
-      padding-top: 2rem;
-      color: #fff;
-    }
-  }
+}
 
-  .gia {
-    img {
+
+}
+
+
+// About
+#about {
+  &-a{
+    img{
       height: 400px;
       width: auto;
       display: block;
       margin-left: auto;
       margin-right: auto;
+      padding-top: 4rem;
+      padding-left: 7rem;
+     
+      
+    }
+    .container-sky {
+      height: 700px;
+      background-size: 130%;
+      width: 40%;     
+      background-repeat: no-repeat;
+      background-image: url(../dist/img/showcase/syuhei-inoue-fvgv3i4_uvI-unsplash.jpg);
     }
   }
-}
+  &-b {
+  
+      .container-special {
+        margin-top: 3rem;
+        display: grid;
+        grid-gap: 1rem;
+        grid-template-columns: repeat(4, 1fr);
 
-// AL Research
-#AL-Research {
-  .research-info {
-    h1 {
-      font-family: Gugi, cursive;
-      font-size: 3rem;
-      color: #f05633;
-      padding-top: 20px;
-    }
-
-    h3 {
-      padding: 0 5rem;
-    }
-    .pages {
-      padding: 20px;
-      img {
-        height: 60vh;
-        width: auto;
-      }
-      p {
-        padding-top: 10px;
-      }
-    }
-    .user-personas {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-
-      h2 {
-        font-family: Gugi, cursive;
-      }
-
-      .felix {
-        background: $light-color;
-        color: $dark-color;
-      }
-      .joan {
-        background: $dark-color;
-        color: #f05633;
-      }
-      .matteo {
-        background: $light-color;
-        color: $dark-color;
-      }
-    }
-
-    .use-survey {
-      list-style-type: circle;
-      list-style-position: inside;
-    }
-  }
-  .themes {
-    padding: 20px;
-    p {
-      padding: 0 100px;
-    }
-  }
-}
-
-// Process
-#process {
-  h1 {
-    font-family: Gugi, cursive;
-    font-size: 3.2rem;
-    color: #f05633;
-  }
-  .card-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 1.2rem;
-  }
-  .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    height: 30rem;
-    width: 100%;
-
-    .card-bg {
-      background: #f05633;
-      color: #fff;
-      h3 {
-        font-size: 1.3rem;
         .fas {
-          color: #f05633;
+          color: $main-color;
+          padding-bottom: 0.4rem;
         }
       }
-    }
+  }  }
 
-    p {
-      padding: 20px;
-    }
-  }
-
-  .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.7);
+  // Footer
+  #main-footer {
+background-color: #ebe5e4;
+color: $secondary-color;
+height: 5rem;
+.footer-content{ 
+  display: flex;
+  justify-content: center;
+}
+p{
+  padding-right: 1rem;
+}
+.fab {
+  color: $secondary-color;
+  padding: 0 .5rem;
+  &:hover {
+    cursor: pointer;
+    color: $main-color;
   }
 }
-
-// Outcome
-#outcome {
-  h1 {
-    font-family: Gugi, cursive;
-    font-size: 3rem;
-    color: #f05633;
   }
 
-  h3 {
-    font-family: 2rem;
-  }
-}
 
-// Contact Page
-#contact {
-  &-a {
-    background: #f1e8dc;
-    .text-fields {
-      display: grid;
-      grid-template-areas:
-        "name email"
-        "subject phone"
-        "message message";
-      grid-gap: 1.2rem;
-      margin-bottom: 1.2rem;
-
-      // Grid Area
-      .name-input {
-        grid-area: name;
-      }
-      .subject-input {
-        grid-area: subject;
-      }
-      .email-input {
-        grid-area: email;
-      }
-      .phone-input {
-        grid-area: phone;
-      }
-      .message-input {
-        grid-area: message;
-        height: 100px;
-      }
-
-      .text-input {
-        padding: 0.5rem 1rem;
-      }
-    }
-
-    button[type="submit"] {
-      width: 58%;
-      border-radius: 5px;
-    }
-  }
-
-  &-b {
-    .contact-info {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      text-align: center;
-      color: $bright-color;
-    }
-  }
-
-  &-c {
-    background: $contact-image no-repeat center right / cover;
-    height: 100vh;
-    width: 100vw;
-
-    h1 {
-      text-align: center;
-      color: coral;
-      font-size: 3.5rem;
-    }
-
-    p {
-      font-size: 1.5rem;
-      text-align: center;
-      color: #8b4513;
-    }
-  }
-}
-
-// Footer
-#main-footer {
-  background: $dark-color;
-  color: #fff;
-  height: 5rem;
-
-  .footer-content {
-    display: flex;
-    justify-content: space-between;
-    height: 5rem;
-    align-items: center;
-
-    .social a {
-      color: #fff;
-      margin-right: 1rem;
-      border: 2px #fff solid;
-      border-radius: 50%;
-      height: 20px;
-      width: 20px;
-      line-height: 20px;
-      text-align: center;
-      padding: 0.5rem;
-
-      &:hover {
-        background: $bright-color;
-      }
-    }
-  }
-}
